--- a/hw/template.tex
+++ b/hw/template.tex
@@ -3,11 +3,21 @@
 \usepackage[english]{babel}
 \usepackage{enumitem}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{mathrsfs}
+\usepackage{mathtools}
 \usepackage{IEEEtrantools}
+\usepackage{geometry}
+\geometry{
+a4paper,
+total={170mm,257mm},
+left=20mm,
+top=20mm,
+}
 
 \renewcommand{\IEEEQED}{\IEEEQEDopen}
+\DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 
 \title{Homework}
 \author{Samuel Lindskog}
@@ -22,5 +32,4 @@
 	\item
 \end{enumerate}
 
-\subsection*{Problem 2}
 \end{document}
