--- a/schoolnotes/optics/optics.tex
+++ b/schoolnotes/optics/optics.tex
@@ -127,6 +127,9 @@
 		v=\sqrt\frac{F}{\mu}
 	\end{equation*}
 \end{defi}
+\begin{defi}[Intensity]
+	The intensity \(I\) of a wave is the time average rate at which energy is transported by the wave, per unit area, across a surface perpendicular to the direction of propagation. It is usually measured in watts per square meter, or \(W/m^2\).
+\end{defi}
 \begin{defi}[Boundary conditions]
 	The conditions at the end of a string such as a rigid support or the complete absence of transverse force are called boundary conditions.
 \end{defi}
