--- a/schoolnotes/topology/topology.tex
+++ b/schoolnotes/topology/topology.tex
@@ -218,6 +218,11 @@ If \(Y\) is a subset of a metric space \(X\), then the closure of \(Y\) is close
 \end{defi}
 \begin{thm}[Baire Category Theorem]
 	Let \(\{U_n\}_{n=1}^{\infty}\) be a sequence of dense open subsets of a complete metric space \(X\). Then \(\bigcap_{n=1}^{\infty}U_n\) is also dense in \(X\).
+	\begin{IEEEproof}
+		We shall prove that \(\bigcap_{n=1}^{\infty}U_n\) is dense in \(X\) by showing that for any ball with \(r>0\) and \(x\in X\)  there exists \(y\in\bigcap_{n=1}^{\infty}U_n\) such that \(y\in B(x,r)\).\bigbreak
+		If \(\epsilon>0\) there exists \(y_1\in U_1\) such that \(y_1\in B(x,\epsilon)\). Because \(B(x,\epsilon)\) and \(U_1\) are both open, there exists \(1>r_1>0\) such that \(B(y_1,r_1)\subseteq U_1\cap B(x,\epsilon)\) and by shrinking \(r_1\) we have \(\overline{B(y_1,r_1)}\subseteq U_1\cap B(x,\epsilon)\). This procedure can be repeated by replacing \(B(x,\epsilon)\) by \(B(y_1,r_1)\), and finding \(y_2\in U_2\cap B(y_1,r_1)\) with \(1/2>r_2>0\) such that \(\overline{B(y_2,r_2)}\subseteq U_2\cap B(y_1,r_1)\).\footnote{Such \(y_2,r_2\) exist because \(y_1\in X\) and \(U_2\) is dense in \(X\), so for every \(r_1\)-ball of \(y_1\) there exists \(y_2\in U_2\) such that \(y_2\) is in this ball.}
+		We can then define a cauchy sequence \(\{y_n\}_{n=1}^{\infty}\) with each \(y_n\) satisfying \(\overline{B(y_n,r_n)}\subseteq U_{n}\cap B(y_{n-1}, r_{n-1})\) with \(1/n>r_n>0\). Because \(X\) is complete, we know that \(\lim_{n\rightarrow\infty}y_n=y\) with \(y\in X\). If \(y\notin\bigcap_{n=1}^{\infty}U_n\) then there exists \(n\) such that \(y\notin B(y_n,r_n)\). If \(m>n\) Then \(y_m\in \overline{B(y_m,r_m)}\cap B(y_n,r_n)\). But then \((y\in B(y_n,r_n)\), a contradiction. Therefore \(y\in\bigcap_{n=1}^{\infty}U_n\).
+	\end{IEEEproof}
 \end{thm}
 \begin{defi}[Nowhere dense]
 	A subset \(Y\) of \(X\) is nowhere dense if \(\overline{Y}\) has no interior points, that is, if
